<resources>
    <string name="app_name">ZemogaTest</string>
    <string name="title_post_list">Posts</string>
    <string name="title_post_detail">Post Detail</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description">Description</string>
    <string name="user">User</string>
    <string name="comments">Comments</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="website">Website</string>
    <string name="menu_item_refresh">Refresh</string>

    <string name="snack_bar_text">1 post deleted</string>
    <string name="snack_bar_undo">Undo</string>
    <string name="action_favorite">Add to favorite</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
