<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_post_list">

    <fragment
        android:id="@+id/navigation_post_list"
        android:name="com.zemoga.zemogatest.ui.postlist.PostListFragment"
        android:label="@string/title_post_list"
        tools:layout="@layout/fragment_post_list" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.zemoga.zemogatest.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.zemoga.zemogatest.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>