<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/text_margin"
    tools:context=".ui.detail.PostDetailFragment">

    <TextView
        android:id="@+id/post_detail_title"
        style="?android:attr/textAppearanceLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?android:attr/actionBarSize"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/description"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/post_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@+id/post_detail_title"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/user_title"
        style="?android:attr/textAppearanceLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/user"
        app:layout_constraintTop_toBottomOf="@+id/post_detail"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextViewStyle"
        android:text="@string/name"
        app:layout_constraintTop_toBottomOf="@+id/user_title"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextViewStyle"
        android:text="@string/email"
        app:layout_constraintTop_toBottomOf="@+id/name"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextViewStyle"
        android:text="@string/phone"
        app:layout_constraintTop_toBottomOf="@+id/email"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/website"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextViewStyle"
        android:text="@string/website"
        app:layout_constraintTop_toBottomOf="@+id/phone"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/comments"
        style="?android:attr/textAppearanceLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="8dp"
        android:text="@string/comments"
        app:layout_constraintTop_toBottomOf="@+id/website"
        tools:layout_editor_absoluteX="0dp" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="@dimen/text_margin_short"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/comments"
        tools:layout_editor_absoluteX="16dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/commentRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            tools:listitem="@layout/comment_list_content" />
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>